[gd_scene load_steps=4 format=3 uid="uid://nfdh5uxkjn60"]

[ext_resource type="Theme" uid="uid://ba60m4xd83i" path="res://assets/default.tres" id="1_6c7eg"]
[ext_resource type="Script" path="res://escenas/UI/popup/popup.gd" id="1_6gk8f"]
[ext_resource type="Texture2D" uid="uid://2l75setafoed" path="res://assets/blue_boxCross.png" id="2_b6bbt"]

[node name="Popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_6c7eg")
script = ExtResource("1_6gk8f")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 426.0
offset_top = 749.0
offset_right = 426.0
offset_bottom = 749.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(540, 960)
color = Color(0, 0, 0, 0.282353)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="PopupTitle" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "TITLE"
horizontal_alignment = 1

[node name="PopupSubtitle" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "SUBTITLE"

[node name="Content" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="PopupButton1" type="Button" parent="PanelContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "BUTTON"

[node name="PopupButton2" type="Button" parent="PanelContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "BUTTON"

[node name="CloseContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = -60
theme_override_constants/margin_right = -60

[node name="CloseButton" type="TextureButton" parent="PanelContainer/CloseContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("2_b6bbt")
texture_pressed = ExtResource("2_b6bbt")
texture_hover = ExtResource("2_b6bbt")
texture_focused = ExtResource("2_b6bbt")
stretch_mode = 4

[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonsContainer/PopupButton1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonsContainer/PopupButton2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/CloseContainer/CloseButton" to="." method="_on_close_button_pressed"]
